0.03002

    - Added time_zone support to Inflator::DateTime

    - New CompoundSprintf filter.
    
    - New DateTime constraint.
    
    - New field method default_empty_value().
    
    - Documented that process() must be called before render() - this has
      been the case since 0.03000.

0.03001 2008-06-20

    - Require version 0.38 of DateTime, for string overloading support.

0.03000 2008-06-19

    - Field container_tag() now defaults to 'div' rather than 'span' to provide
      better layout without CSS.
    
    - Multi block no longer sets container_tag() to 'span' - defaults to 'div'.
    
    - HTML::FormFu::Model::DBIC moved out into a separate distribution.
    
    - Models now accessed through new form method: model(), with accompanying
      methods: default_model() and model_config.
    
    - Deprecated form methods: model_class(), defaults_from_model(),
      save_to_model().
    
    - Model methods renamed to: default_model(), default_values() and update().
    
    - New model method: create().
    
    - Deprecated element method: db().
    
    - Bugfixes for perl 5.10.0 (missing imports).
    
    - Bugfix: insert_before() and insert_after() now check if the object is 
      already a child, and if so, removes it first. Reported by Ferruccio 
      Zamuner.
    
    - Bugfix: update() many_to_many multi-value fields where 
      'default_column' included the table name (or 'me.') failed.
    
    - Bugfix: make inflators work with multiple submitted values.
    
    - Bugfix for Bool constraint: use '?' quantifier, not '*'.
    
    - Bugfix in Email constraint: ensure Email::Valid->address() is called in
      scalar context.
    
    - New Split and CompoundJoin filters.
    
    - New CompoundDateTime inflator.
    
    - New CompoundSplit and CompoundDateTime deflators.
    
    - New Plugin system (see tests, not yet documented) and StashValid plugin.
    