@@ -30,6 +30,8 @@ our @form_and_block = qw/
     _single_validator
     _single_transformer
     _require_constraint
+    default_args
+    element_defaults
     get_element
     get_elements
     get_deflators
@@ -85,6 +87,47 @@ our %EXPORT_TAGS = (
     FORM_AND_ELEMENT => \@form_and_element,
 );
 
+sub default_args {
+    my ( $self, $arg ) = @_;
+    
+    $self->{default_args} ||= {};
+    
+    if ($arg) {
+        
+        my @valid_keys = qw/ elements deflators filters constraints inflators
+            validators transformers output_processors /;
+        
+        for my $key ( keys %$arg ) {
+            croak "not a valid key for default_args: '$key'"
+                if !grep { $key eq $_ } @valid_keys;
+        }
+        
+        $self->{default_args} = _merge_hashes( $self->{default_args}, $arg );
+    }
+    
+    return $self->{default_args};
+}
+
+sub element_defaults {
+    my ( $self, $arg ) = @_;
+    
+    warn "element_defaults() method deprecated and is provided for compatability only: "
+        . "use defaults()->{elements} instead as this will be removed\n";
+    
+    $self->{default_args} ||= {};
+    
+    if ($arg) {
+        if ( exists $self->{default_args}{elements} ) {
+            $self->{default_args}{elements} = _merge_hashes( $self->{default_args}{elements}, $arg );
+        }
+        else {
+            $self->{default_args}{elements} = $arg;
+        }
+    }
+    
+    return $self->{default_args}{elements};
+}
+
 sub _require_element {
     my ( $self, $arg ) = @_;
 
@@ -105,12 +148,13 @@ sub _require_element {
             parent => $self,
         } );
 
-    if ( $element->can('element_defaults') ) {
-        $element->element_defaults( dclone $self->element_defaults );
+    if ( $element->can('default_args') ) {
+        $element->default_args( dclone $self->default_args );
     }
 
-    if ( exists $self->element_defaults->{$type} ) {
-        %$arg = ( %{ $self->element_defaults->{$type} }, %$arg );
+    # handle default_args
+    if ( exists $self->default_args->{elements}{$type} ) {
+        %$arg = ( %{ $self->default_args->{elements}{$type} }, %$arg );
     }
 
     populate( $element, $arg );
@@ -204,6 +248,13 @@ sub _require_constraint {
             parent => $self,
         } );
 
+    # handle default_args
+    my $parent = $self->parent;
+
+    if ( exists $parent->default_args->{constraints}{$type} ) {
+        %$arg = ( %{ $parent->default_args->{constraints}{$type} }, %$arg );
+    }
+
     # inlined ObjectUtil::populate(), otherwise circular dependency
     eval {
         map { $constraint->$_( $arg->{$_} ) } keys %$arg;
@@ -251,8 +302,15 @@ sub clear_errors {
 sub populate {
     my ( $self, $arg ) = @_;
 
+    # we have to handle element_defaults seperately, as it is no longer a
+    # simple hash key
+    
+    if ( exists $arg->{element_defaults} ) {
+        $self->element_defaults( delete $arg->{element_defaults} );
+    }
+
     my @keys = qw(
-        element_defaults auto_fieldset load_config_file element elements
+        default_args auto_fieldset load_config_file element elements
         default_values
         filter filters constraint constraints inflator inflators
         deflator deflators query validator validators transformer transformers
@@ -504,7 +562,7 @@ sub clone {
     $new{languages}        = dclone $self->languages;
     $new{model_config}     = dclone $self->model_config;
 
-    $new{element_defaults} = $self->element_defaults;
+    $new{default_args} = $self->default_args;
 
     my $obj = bless \%new, ref $self;
 
@@ -1212,6 +1270,13 @@ sub _require_deflator {
             parent => $self,
         } );
 
+    # handle default_args
+    my $parent = $self->parent;
+
+    if ( exists $parent->default_args->{deflators}{$type} ) {
+        %$opt = ( %{ $parent->default_args->{deflators}{$type} }, %$opt );
+    }
+
     $object->populate($opt);
 
     return $object;
@@ -1238,6 +1303,13 @@ sub _require_filter {
             type   => $type,
             parent => $self,
         } );
+
+    # handle default_args
+    my $parent = $self->parent;
+
+    if ( exists $parent->default_args->{filters}{$type} ) {
+        %$opt = ( %{ $parent->default_args->{filters}{$type} }, %$opt );
+    }
 
     $object->populate($opt);
 
@@ -1266,6 +1338,13 @@ sub _require_inflator {
             parent => $self,
         } );
 
+    # handle default_args
+    my $parent = $self->parent;
+
+    if ( exists $parent->default_args->{inflators}{$type} ) {
+        %$opt = ( %{ $parent->default_args->{inflators}{$type} }, %$opt );
+    }
+
     $object->populate($opt);
 
     return $object;
@@ -1293,6 +1372,13 @@ sub _require_validator {
             parent => $self,
         } );
 
+    # handle default_args
+    my $parent = $self->parent;
+
+    if ( exists $parent->default_args->{validators}{$type} ) {
+        %$opt = ( %{ $parent->default_args->{validators}{$type} }, %$opt );
+    }
+
     $object->populate($opt);
 
     return $object;
@@ -1319,6 +1405,13 @@ sub _require_transformer {
             type   => $type,
             parent => $self,
         } );
+
+    # handle default_args
+    my $parent = $self->parent;
+
+    if ( exists $parent->default_args->{transformers}{$type} ) {
+        %$opt = ( %{ $parent->default_args->{transformers}{$type} }, %$opt );
+    }
 
     $object->populate($opt);
 
